Tried interactive widgets ipywidgets to show info

--- a/Simon's world cup 2018 playground.ipynb
+++ b/Simon's world cup 2018 playground.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -34,8 +34,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class wc_group(object):\n",
@@ -193,6 +195,8 @@
     "                print(self.winner.getCountryNameWithCode() + \" wins!\")\n",
     "            else:\n",
     "                print(\"Draw Game!\")\n",
+    "        else:\n",
+    "            print(\"Game is not yet finished!\")\n",
     "    \n",
     "    def printMatchEvents(self):\n",
     "        print(\"Events:\")\n",
@@ -209,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -231,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -312,12 +316,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### build all matches in group B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for t in group_dict['B'].teamInGroup():\n",
+    "    t.fetchDetailedMatchInfo()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### print all completed matches of Russia in Group A"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -375,6 +398,57 @@
     "    print(m)\n",
     "    m.printBasicMatchInfo()\n",
     "    m.printMatchEvents()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### interactive with *ipwidgets*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5e5c914984f94aa29cf97d733b0ec23a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter Widget"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.showTeamInfo>"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "\n",
+    "def showMatchInfo(x):\n",
+    "    x.printBasicMatchInfo()\n",
+    "\n",
+    "def showTeamInfo(x):\n",
+    "    print(x)\n",
+    "    if x.team_match_dict:\n",
+    "        print(\"Match Basic Info:\")\n",
+    "        widgets.interact(showMatchInfo, x=widgets.Dropdown(description=\"Match ID\", options=x.team_match_dict))\n",
+    "widgets.interact(showTeamInfo, x=widgets.Dropdown(description=\"Team\", options=team_dict))"
    ]
   },
   {
