Added feature to show flag when choosing a team with ipywidgets
- also added an image of world cup 2018 to the markdown block as the
title image of the notebook

--- a/Simon's world cup 2018 playground.ipynb
+++ b/Simon's world cup 2018 playground.ipynb
@@ -6,12 +6,14 @@
    "source": [
     "# Simon's world Cup 2018 Playground\n",
     "\n",
-    "This is the playground of mine to play with world cup 2018's data. The data is based on [this free API](http://worldcup.sfg.io/). This notebook is the testfield and lab where I can play, explore and learn from this project of mine, so please bear with me if it's too messy."
+    "This is the playground of mine to play with world cup 2018's data. The data is based on [this free API](http://worldcup.sfg.io/). This notebook is the testfield and lab where I can play, explore and learn from this project of mine, so please bear with me if it's too messy.\n",
+    "\n",
+    "<img src=\"./statics/227px-2018_FIFA_World_Cup.svg.png\">"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -240,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -262,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -280,14 +282,14 @@
       "Iran(IRN) Wins:1 Draws:0 Losses:1 Games played:2 Points:3 Goals for:1 Goals against:1 Goal differential:0\n",
       "Morocco(MAR) Wins:0 Draws:0 Losses:2 Games played:2 Points:0 Goals for:0 Goals against:2 Goal differential:-2\n",
       "Group: C\n",
+      "France(FRA) Wins:2 Draws:0 Losses:0 Games played:2 Points:6 Goals for:3 Goals against:1 Goal differential:2\n",
       "Denmark(DEN) Wins:1 Draws:1 Losses:0 Games played:2 Points:4 Goals for:2 Goals against:1 Goal differential:1\n",
-      "France(FRA) Wins:1 Draws:0 Losses:0 Games played:1 Points:3 Goals for:2 Goals against:1 Goal differential:1\n",
       "Australia(AUS) Wins:0 Draws:1 Losses:1 Games played:2 Points:1 Goals for:2 Goals against:3 Goal differential:-1\n",
-      "Peru(PER) Wins:0 Draws:0 Losses:1 Games played:1 Points:0 Goals for:0 Goals against:1 Goal differential:-1\n",
+      "Peru(PER) Wins:0 Draws:0 Losses:2 Games played:2 Points:0 Goals for:0 Goals against:2 Goal differential:-2\n",
       "Group: D\n",
-      "Croatia(CRO) Wins:1 Draws:0 Losses:0 Games played:1 Points:3 Goals for:2 Goals against:0 Goal differential:2\n",
+      "Croatia(CRO) Wins:2 Draws:0 Losses:0 Games played:2 Points:6 Goals for:5 Goals against:0 Goal differential:5\n",
       "Iceland(ISL) Wins:0 Draws:1 Losses:0 Games played:1 Points:1 Goals for:1 Goals against:1 Goal differential:0\n",
-      "Argentina(ARG) Wins:0 Draws:1 Losses:0 Games played:1 Points:1 Goals for:1 Goals against:1 Goal differential:0\n",
+      "Argentina(ARG) Wins:0 Draws:1 Losses:1 Games played:2 Points:1 Goals for:1 Goals against:4 Goal differential:-3\n",
       "Nigeria(NGA) Wins:0 Draws:0 Losses:1 Games played:1 Points:0 Goals for:0 Goals against:2 Goal differential:-2\n",
       "Group: E\n",
       "Serbia(SRB) Wins:1 Draws:0 Losses:0 Games played:1 Points:3 Goals for:1 Goals against:0 Goal differential:1\n",
@@ -329,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -348,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -367,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -447,13 +449,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "08c388f345784e8b8bfacfdf7a41260a",
+       "model_id": "e9d6c123e83644d7a5f304a1b8f1e32f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -467,7 +469,7 @@
    ],
    "source": [
     "import ipywidgets as widgets\n",
-    "out = widgets.Output(layout={'border': '3px solid black'})\n",
+    "out = widgets.Output()\n",
     "match_info_out = widgets.Output(layout={'border': '1px solid black'})\n",
     "\n",
     "\n",
@@ -510,12 +512,16 @@
     "    out.clear_output()\n",
     "    with out:\n",
     "        print(x)\n",
-    "    display(out)\n",
+    "    fi = open(\"./statics/Flag_of_\" + x.getCountryName() + \".svg.png\", 'rb')\n",
+    "    image = fi.read()\n",
+    "    team_flag = widgets.Image(value=image, format='png', width=36, height=6)\n",
+    "    team_info_box = widgets.HBox([team_flag, out])\n",
+    "    display(team_info_box)\n",
     "    if x.team_match_dict:\n",
     "        choose_match_dropdown = widgets.interactive(showMatchInfo, x=widgets.Dropdown(description=\"Match\",\n",
     "                                                                                         options=x.getMatchDictByOpponent()))\n",
     "        display(choose_match_dropdown)\n",
-    "        widgets.VBox([choose_team_dropdown, out, choose_match_dropdown, match_info_out])\n",
+    "        widgets.VBox([choose_team_dropdown, team_info_box, choose_match_dropdown, match_info_out])\n",
     "        \n",
     "\n",
     "\n",
