Added feature to show match info with certain event images and team flags

--- a/Simon's world cup 2018 playground.ipynb
+++ b/Simon's world cup 2018 playground.ipynb
@@ -288,14 +288,14 @@
       "Peru(PER) Wins:0 Draws:0 Losses:2 Games played:2 Points:0 Goals for:0 Goals against:2 Goal differential:-2\n",
       "Group: D\n",
       "Croatia(CRO) Wins:2 Draws:0 Losses:0 Games played:2 Points:6 Goals for:5 Goals against:0 Goal differential:5\n",
-      "Iceland(ISL) Wins:0 Draws:1 Losses:0 Games played:1 Points:1 Goals for:1 Goals against:1 Goal differential:0\n",
+      "Nigeria(NGA) Wins:1 Draws:0 Losses:1 Games played:2 Points:3 Goals for:2 Goals against:2 Goal differential:0\n",
+      "Iceland(ISL) Wins:0 Draws:1 Losses:1 Games played:2 Points:1 Goals for:1 Goals against:3 Goal differential:-2\n",
       "Argentina(ARG) Wins:0 Draws:1 Losses:1 Games played:2 Points:1 Goals for:1 Goals against:4 Goal differential:-3\n",
-      "Nigeria(NGA) Wins:0 Draws:0 Losses:1 Games played:1 Points:0 Goals for:0 Goals against:2 Goal differential:-2\n",
       "Group: E\n",
-      "Serbia(SRB) Wins:1 Draws:0 Losses:0 Games played:1 Points:3 Goals for:1 Goals against:0 Goal differential:1\n",
-      "Switzerland(SUI) Wins:0 Draws:1 Losses:0 Games played:1 Points:1 Goals for:1 Goals against:1 Goal differential:0\n",
-      "Brazil(BRA) Wins:0 Draws:1 Losses:0 Games played:1 Points:1 Goals for:1 Goals against:1 Goal differential:0\n",
-      "Costa Rica(CRC) Wins:0 Draws:0 Losses:1 Games played:1 Points:0 Goals for:0 Goals against:1 Goal differential:-1\n",
+      "Brazil(BRA) Wins:1 Draws:1 Losses:0 Games played:2 Points:4 Goals for:3 Goals against:1 Goal differential:2\n",
+      "Switzerland(SUI) Wins:1 Draws:1 Losses:0 Games played:2 Points:4 Goals for:3 Goals against:2 Goal differential:1\n",
+      "Serbia(SRB) Wins:1 Draws:0 Losses:1 Games played:2 Points:3 Goals for:2 Goals against:2 Goal differential:0\n",
+      "Costa Rica(CRC) Wins:0 Draws:0 Losses:2 Games played:2 Points:0 Goals for:0 Goals against:3 Goal differential:-3\n",
       "Group: F\n",
       "Sweden(SWE) Wins:1 Draws:0 Losses:0 Games played:1 Points:3 Goals for:1 Goals against:0 Goal differential:1\n",
       "Mexico(MEX) Wins:1 Draws:0 Losses:0 Games played:1 Points:3 Goals for:1 Goals against:0 Goal differential:1\n",
@@ -449,13 +449,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9d6c123e83644d7a5f304a1b8f1e32f",
+       "model_id": "9132ddf97ed546ae907c3dad491fb74d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -481,12 +481,44 @@
     "    button_show_events = widgets.Button(description=\"Show Events\")\n",
     "    button_home_statistics = widgets.Button(description = x.getHomeTeam().getCountryName() + \" statistics\")\n",
     "    button_away_statistics = widgets.Button(description = x.getAwayTeam().getCountryName() + \" statistics\")\n",
+    "    f_flag_home = open(\"./statics/Flag_of_\" + x.getHomeTeam().getCountryName() + \".svg.png\", 'rb').read()\n",
+    "    f_flag_away = open(\"./statics/Flag_of_\" + x.getAwayTeam().getCountryName() + \".svg.png\", 'rb').read()\n",
+    "    flag_home = widgets.Image(value=f_flag_home, format='png', width=45, height=9)\n",
+    "    flag_away = widgets.Image(value=f_flag_away, format='png', width=45, height=9)\n",
     "    bout=widgets.Output()\n",
     "    def buttonShowEventsOnClick(b):\n",
     "        bout.clear_output()\n",
     "        with bout:\n",
     "            for e in x.getOrderedEventsList():\n",
-    "                print(e)\n",
+    "                if e[\"type_of_event\"] in ['yellow-card', 'red-card', 'substitution-in', 'substitution-out']:\n",
+    "                    f_event_type = open(\"./statics/\" + e[\"type_of_event\"] + \".svg.png\", 'rb').read()\n",
+    "                    event_type = widgets.Image(value=f_event_type, format='png', width=12, height=24)\n",
+    "                elif e['type_of_event'] in ['goal-own','goal-penalty', 'goal']:\n",
+    "                    goal_type_out = widgets.Output(layout={'border': '1px solid red'})\n",
+    "                    with goal_type_out:\n",
+    "                        if e['type_of_event'] == 'goal-own':\n",
+    "                            print(\"o.g.\")\n",
+    "                        elif e['type_of_event'] == 'goal-penalty':\n",
+    "                            print(\"pen.\")\n",
+    "                    f_event_type = open(\"./statics/goal.svg.png\", 'rb').read()\n",
+    "                    if e['type_of_event'] == 'goal':\n",
+    "                        event_type = widgets.Image(value=f_event_type, format='png', width=24, height=24)\n",
+    "                    else:\n",
+    "                        event_type = widgets.HBox([widgets.Image(value=f_event_type, format='png', width=24, height=24), goal_type_out])\n",
+    "                else:\n",
+    "                    event_type = widgets.Output(layout={'border': '1px solid black'})\n",
+    "                    with event_type:\n",
+    "                        print(e[\"type_of_event\"])\n",
+    "                event_time = widgets.Output(layout={'border': '3px solid black'})\n",
+    "                with event_time:\n",
+    "                    print(e['time'])\n",
+    "                event_player = widgets.Output()\n",
+    "                with event_player:\n",
+    "                    print(e['player'])\n",
+    "                event_flag = flag_home if e['team']==x.getHomeTeam() else flag_away\n",
+    "                event_info_box = widgets.HBox([event_time, event_type, event_player, event_flag])\n",
+    "                display(event_info_box)\n",
+    "                \n",
     "    def buttonShowHomeStatisticsOnClick(b):\n",
     "        bout.clear_output()\n",
     "        with bout:\n",
