Added codes to fetch all matches(with determined teams) and to attach match info to the teams

--- a/Simon's world cup 2018 playground.ipynb
+++ b/Simon's world cup 2018 playground.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -83,7 +83,7 @@
     "               \" Goals for:\" + str(self.goals_for) + \" Goals against:\" + str(self.goals_against) + \" Goal differential:\" +\\\n",
     "               str(self.goal_differential)\n",
     "                \n",
-    "    def _classifyPlayedMatchesByResults(self):\n",
+    "    def classifyPlayedMatchesByResults(self):\n",
     "        for m in self.team_completed_match_dict.values():\n",
     "            if m.getWinner() == \"Draw\":\n",
     "                self.team_draw_match_dict[m.getMatchId()] = m\n",
@@ -125,7 +125,20 @@
     "        \n",
     "        matches_json.close()\n",
     "        \n",
-    "        self._classifyPlayedMatchesByResults()\n",
+    "        self.classifyPlayedMatchesByResults()\n",
+    "        \n",
+    "    def addMatch(self, m):\n",
+    "        if not m.getMatchId() in self.team_match_dict:\n",
+    "            self.team_match_dict[m.getMatchId()] = m\n",
+    "        if m.isCompleted() and (not m.getMatchId() in self.team_completed_match_dict):\n",
+    "            self.team_completed_match_dict[m.getMatchId()] = m\n",
+    "        if not m.getMatchId() in self.match_id_opponent_dict:\n",
+    "            if m.getHomeTeam()==self:\n",
+    "                self.match_id_opponent_dict[m.getMatchId()] = m.getAwayTeam()\n",
+    "            else:\n",
+    "                self.match_id_opponent_dict[m.getMatchId()] = m.getHomeTeam()\n",
+    "            \n",
+    "        \n",
     "    \n",
     "    def getFifaCode(self):\n",
     "        return self.fifa_code\n",
@@ -242,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -264,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -297,15 +310,15 @@
       "Serbia(SRB) Wins:1 Draws:0 Losses:1 Games played:2 Points:3 Goals for:2 Goals against:2 Goal differential:0\n",
       "Costa Rica(CRC) Wins:0 Draws:0 Losses:2 Games played:2 Points:0 Goals for:0 Goals against:3 Goal differential:-3\n",
       "Group: F\n",
-      "Sweden(SWE) Wins:1 Draws:0 Losses:0 Games played:1 Points:3 Goals for:1 Goals against:0 Goal differential:1\n",
-      "Mexico(MEX) Wins:1 Draws:0 Losses:0 Games played:1 Points:3 Goals for:1 Goals against:0 Goal differential:1\n",
-      "Korea Republic(KOR) Wins:0 Draws:0 Losses:1 Games played:1 Points:0 Goals for:0 Goals against:1 Goal differential:-1\n",
-      "Germany(GER) Wins:0 Draws:0 Losses:1 Games played:1 Points:0 Goals for:0 Goals against:1 Goal differential:-1\n",
+      "Mexico(MEX) Wins:2 Draws:0 Losses:0 Games played:2 Points:6 Goals for:3 Goals against:1 Goal differential:2\n",
+      "Sweden(SWE) Wins:1 Draws:0 Losses:1 Games played:2 Points:3 Goals for:2 Goals against:2 Goal differential:0\n",
+      "Germany(GER) Wins:1 Draws:0 Losses:1 Games played:2 Points:3 Goals for:2 Goals against:2 Goal differential:0\n",
+      "Korea Republic(KOR) Wins:0 Draws:0 Losses:2 Games played:2 Points:0 Goals for:1 Goals against:3 Goal differential:-2\n",
       "Group: G\n",
-      "Belgium(BEL) Wins:1 Draws:0 Losses:0 Games played:1 Points:3 Goals for:3 Goals against:0 Goal differential:3\n",
-      "England(ENG) Wins:1 Draws:0 Losses:0 Games played:1 Points:3 Goals for:2 Goals against:1 Goal differential:1\n",
-      "Tunisia(TUN) Wins:0 Draws:0 Losses:1 Games played:1 Points:0 Goals for:1 Goals against:2 Goal differential:-1\n",
-      "Panama(PAN) Wins:0 Draws:0 Losses:1 Games played:1 Points:0 Goals for:0 Goals against:3 Goal differential:-3\n",
+      "England(ENG) Wins:2 Draws:0 Losses:0 Games played:2 Points:6 Goals for:8 Goals against:2 Goal differential:6\n",
+      "Belgium(BEL) Wins:2 Draws:0 Losses:0 Games played:2 Points:6 Goals for:8 Goals against:2 Goal differential:6\n",
+      "Tunisia(TUN) Wins:0 Draws:0 Losses:2 Games played:2 Points:0 Goals for:3 Goals against:7 Goal differential:-4\n",
+      "Panama(PAN) Wins:0 Draws:0 Losses:2 Games played:2 Points:0 Goals for:1 Goals against:9 Goal differential:-8\n",
       "Group: H\n",
       "Senegal(SEN) Wins:1 Draws:0 Losses:0 Games played:1 Points:3 Goals for:2 Goals against:1 Goal differential:1\n",
       "Japan(JPN) Wins:1 Draws:0 Losses:0 Games played:1 Points:3 Goals for:2 Goals against:1 Goal differential:1\n",
@@ -331,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -350,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -369,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -444,18 +457,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### add all matches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_matches_json = urllib.request.urlopen('http://worldcup.sfg.io/matches')\n",
+    "all_matches_python = json.loads(all_matches_json.read())\n",
+    "\n",
+    "for m in all_matches_python:\n",
+    "    if not m['fifa_id'] in match_dict:\n",
+    "        if (m['home_team']['country'] != \"To Be Determined\") and (m['away_team']['country'] != \"To Be Determined\"):\n",
+    "            match_dict[m['fifa_id']] = wc_match(location = m['venue'], venue = m['location'],\n",
+    "                                                status = m['status'], time = m['time'],\n",
+    "                                                fifa_id = m['fifa_id'], datetime = m['datetime'],\n",
+    "                                                home_team = team_dict[m['home_team']['country']],\n",
+    "                                                away_team = team_dict[m['away_team']['country']],\n",
+    "                                                home_team_goals = m['home_team']['goals'],\n",
+    "                                                away_team_goals = m['away_team']['goals'],\n",
+    "                                                home_team_statistics = m['home_team_statistics'],\n",
+    "                                                away_team_statistics = m['away_team_statistics'],\n",
+    "                                                home_event_list = m['home_team_events'],\n",
+    "                                                away_event_list = m['away_team_events'], winner = m['winner_code'])\n",
+    "            team_dict[m['home_team']['country']].addMatch(match_dict[m['fifa_id']])\n",
+    "            team_dict[m['away_team']['country']].addMatch(match_dict[m['fifa_id']])\n",
+    "            \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### interactive with *ipwidgets*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9132ddf97ed546ae907c3dad491fb74d",
+       "model_id": "8d35bc62a289492280bad4d26de90732",
        "version_major": 2,
        "version_minor": 0
       },
