Regrouped (by adding cells) classes as one class per cell
main reason for this modification is readability and maintenance purpose

--- a/Simon's world cup 2018 playground.ipynb
+++ b/Simon's world cup 2018 playground.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -31,12 +31,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### classes of the project"
+    "# classes of the project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### group"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -53,8 +60,24 @@
     "    \n",
     "    def teamInGroup(self):\n",
     "        for team in self.teams.values():\n",
-    "            yield team\n",
-    "        \n",
+    "            yield team"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### team"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "class wc_team(object):\n",
     "\n",
     "    def __init__(self, team_id, country, fifa_code, wins, draws, losses, games_played, points, goals_for, goals_against, goal_differential):\n",
@@ -160,9 +183,24 @@
     "                d[\"v.s. \" + m.getAwayTeam().getCountryName() + \"   [\" + m.getMatchId() + \"]\"] = m\n",
     "            else:\n",
     "                d[\"v.s. \" + m.getHomeTeam().getCountryName() + \"   [\" + m.getMatchId() + \"]\"] = m\n",
-    "        return d\n",
-    "                \n",
-    "    \n",
+    "        return d      "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "class wc_match(object):\n",
     "    def __init__(self, location, venue, status , time, fifa_id, datetime ,\n",
     "                 home_team_goals, away_team_goals,\n",
@@ -255,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -462,8 +500,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "all_matches_json = urllib.request.urlopen('http://worldcup.sfg.io/matches')\n",
@@ -498,13 +538,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d35bc62a289492280bad4d26de90732",
+       "model_id": "16d545a67ae64b3fb1c03f570ec068b2",
        "version_major": 2,
        "version_minor": 0
       },
