Added a markdown cell below the title to keep notes

--- a/Simon's world cup 2018 playground.ipynb
+++ b/Simon's world cup 2018 playground.ipynb
@@ -12,6 +12,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NOTES\n",
+    "\n",
+    "### NOTES to title markdown cell above\n",
+    "\n",
+    "[ref/doc link](http://jupyter-notebook.readthedocs.io/en/latest/examples/Notebook/Working%20With%20Markdown%20Cells.html)\n",
+    "\n",
+    "1. Way to add Hyperlink\n",
+    "    ```\n",
+    "    [shown word](url)\n",
+    "    ```\n",
+    "2. Add image to the cell\n",
+    "    ```\n",
+    "    <img src=\"./statics/227px-2018_FIFA_World_Cup.svg.png\">\n",
+    "    ```\n",
+    "    \n",
+    "### NOTES to ipwidgets\n",
+    "[ipwidgets doc](http://ipywidgets.readthedocs.io/en/latest/index.html)\n",
+    "\n",
+    "##### 1. ipwidgets.Output\n",
+    "[see this doc](http://ipywidgets.readthedocs.io/en/latest/examples/Output%20Widget.html)\n",
+    "* the way to add strings to show\n",
+    "    ```python\n",
+    "    out = ipwidgets.Output()\n",
+    "    with out:\n",
+    "        print(\"hello world\")\n",
+    "    display(out)\n",
+    "    ```\n",
+    "* the way to clear the Output\n",
+    "    ```python\n",
+    "    out.clear_output()\n",
+    "    ```\n",
+    "##### 2. ipwidgets.Image\n",
+    "[see this doc](https://ipywidgets.readthedocs.io/en/latest/examples/Widget%20List.html?#Image)\n",
+    "\n",
+    "* The file must be open in 'b' mode\n",
+    "    ```python\n",
+    "    f_image = open(\"image.png\", 'rb')\n",
+    "    ```\n",
+    "##### 3. ipwidgets.interact and ipwidgets.interactive\n",
+    "[see this doc](https://ipywidgets.readthedocs.io/en/latest/examples/Using%20Interact.html)\n",
+    "\n",
+    "**interact** directly display the widgets, while **interactive** returns a widgets which is not displayed directly.\n",
+    "\n",
+    "##### 4. use ipwidgets.VBox and ipwidgets.HBox to allign widgets (they work as containers)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
